--- a/res/layout/activity_stream.xml
+++ b/res/layout/activity_stream.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StreamActivity" >
+    tools:context=".StreamActivity"
+    android:orientation="horizontal" >
     
     <LinearLayout
             android:id="@+id/statusmsg"
@@ -21,6 +22,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/enable_gui" />
+            
+            <EditText 
+                android:layout_marginTop="10dp"
+                android:id="@+id/extra_args"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minLines="2"
+                android:hint="Enter extra command line params"
+                android:inputType="text" />
+            
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save Extra Params"
+                android:onClick="onSaveExtraParamsClick" />
             
     </LinearLayout>
 
